--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-black border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -19,11 +19,23 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </ul>
+                </div>
+                <div class="dropdown px-3">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Student
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li class="nav-item dropdown-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Add">Add</a>
                         </li>
+
+                        <li class="nav-item dropdown-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="View">View</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -37,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            <h6 class="display-6 text-center">Footer</h6>
+            <h6 class="display-6 text-center"></h6>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
