--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                         </li>
 
                         <li class="nav-item dropdown-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="View">View</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Add">View</a>
                         </li>
 
                     </ul>
