--- a/StudentManagement/Views/New Student/Index.cshtml
+++ b/StudentManagement/Views/New Student/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@{
+﻿@model Student
+@{
     ViewData["Title"] = "Add Or Update Student";
 }
 
-Explain
-<form>
+@*<form>
     <div class="row mb-3">
         <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
@@ -50,5 +50,32 @@ Explain
         </div>
     </div>
     <button type="submit" class="btn btn-primary">Sign in</button>
-</form>
+</form>*@
 
+<div class="container mt-3">
+    <h1></h1>
+    <form id="registrationForm">
+        <div class="row mb-3">
+            <div class="col-md-3">
+                <label for="name" class="form-label">Full Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter your full name" required>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label for="studentID" class="form-label">Student ID</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="studentID" name="studentID" placeholder="Enter your student ID" required>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+    </form>
+</div>
+<script src="/js/Student.js"></script>
