--- a/StudentManagement/Views/New Student/Index.cshtml
+++ b/StudentManagement/Views/New Student/Index.cshtml
@@ -3,79 +3,96 @@
     ViewData["Title"] = "Add Or Update Student";
 }
 
-@*<form>
-    <div class="row mb-3">
-        <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3">
-        </div>
-    </div>
-    <div class="row mb-3">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3">
-        </div>
-    </div>
-    <fieldset class="row mb-3">
-        <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
-        <div class="col-sm-10">
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                <label class="form-check-label" for="gridRadios1">
-                    First radio
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                <label class="form-check-label" for="gridRadios2">
-                    Second radio
-                </label>
-            </div>
-            <div class="form-check disabled">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
-                <label class="form-check-label" for="gridRadios3">
-                    Third disabled radio
-                </label>
-            </div>
-        </div>
-    </fieldset>
-    <div class="row mb-3">
-        <div class="col-sm-10 offset-sm-2">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck1">
-                <label class="form-check-label" for="gridCheck1">
-                    Example checkbox
-                </label>
-            </div>
-        </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
-</form>*@
-
-<div class="container mt-3">
+<div class="container-fluid mt-3">
     <h1></h1>
-    <form id="registrationForm">
-        <div class="row mb-3">
-            <div class="col-md-3">
-                <label for="name" class="form-label">Full Name</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter your full name" required>
+    <div class="card">
+        <div class="card-body">
+            <div class="row mb-3 bg-black text-white border border-dark rounded-3 p-3 d-flex justify-content-center">
+                <div class="col-md-3">
+                    <div class="col-sm-10 ">
+                        <img src="/Images/OldMan.png"
+                             class="img-fluid p-2"
+                             alt="Image description" />
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="col-sm-10 pt-5">
+                        <p class="lead" style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
+                            <i>
+                                Add your child<br />
+                                with us..
+                            </i>
+                        </p>
+                    </div>
                 </div>
             </div>
+            <form id="registrationForm" method="post"  asp-controller="Student" asp-action="Add">
+                <div class="card-body ">
+                    <div class="row mb-3">
+                        <div class="col-md-3 col-lg-6">
+                            <label for="name" asp-for="Name" class="form-label">Full Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" asp-for="Id" type="hidden">
+                                <input type="text" asp-for="Name" class="form-control" id="name" name="name" placeholder="Enter your full name" >
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-lg-6">
+                            <label for="name" asp-for="RollNumber" class="form-label">Roll Number</label>
+                            <div class="col-sm-10">
+                                <input type="text" asp-for="RollNumber" class="form-control" name="RollNumber" placeholder="Enter your full name">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-md-3 col-lg-6">
+                            <label for="email" asp-for="DOB" class="form-label">DOB</label>
+                            <div class="col-sm-10">
+                                <input type="date" asp-for="DOB" class="form-control" name="DOB">
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-lg-6">
+                            <label for="email" asp-for="Phone" class="form-label">Phone Number</label>
+                            <div class="col-sm-10">
+                                <input type="text" asp-for="Phone" class="form-control" id="email" name="Phone" placeholder="Enter your PhoneNumber">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-md-3 col-lg-6">
+                            <label for="email" asp-for="Email" class="form-label">Email</label>
+                            <div class="col-sm-10">
+                                <input type="email" asp-for="Email" class="form-control" id="email" name="email" placeholder="Enter your email" >
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-lg-6">
+                            <label for="email" asp-for="Gender" class="form-label">Gender</label>
+                            <div class="col-sm-10">
+                                <select class="form-select" asp-for="Gender" aria-label="Default select example">
+                                    <option value="0">Select</option>
+                                    <option value="Male">Male</option>
+                                    <option value="Female">Female</option>
+                                </select>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-md-3 col-lg-6">
+                            <label for="email" asp-for="Address" class="form-label">Address</label>
+                            <div class="col-sm-10">
+                                <textarea class="form-control" asp-for="Address" name="Address" rows="3"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-lg-6">
+                            <label for="email" asp-for="Department" class="form-label">Department</label>
+                            <div class="col-sm-10">
+                                <input type="text" asp-for="Department" class="form-control" id="email" name="Department" placeholder="Enter your School">
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" asp-controller="Student" asp-action="Add" class="btn btn-primary">Save</button>
+                </div>
+            </form>
         </div>
-        <div class="row mb-3">
-            <label for="email" class="form-label">Email address</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label for="studentID" class="form-label">Student ID</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="studentID" name="studentID" placeholder="Enter your student ID" required>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-    </form>
+    </div>
 </div>
-<script src="/js/Student.js"></script>
