--- a/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/Views/Home/Index.cshtml
@@ -2,26 +2,41 @@
     ViewData["Title"] = "Home Page";
 }
 <center>
-<h1>Student Management System</h1>
-<p>A student management system is an essential tool for educational institutions to efficiently manage student data and academic information. These systems typically include features such as student registration, attendance tracking, grade management, and communication tools between students, teachers, and parents. By centralizing student information, these systems streamline administrative tasks, improve communication, and provide valuable insights into student performance and progress. Additionally, they often offer security measures to protect sensitive data and customizable features to meet the specific needs of different educational settings. Overall, a well-designed student management system plays a crucial role in enhancing the overall effectiveness and organization of educational institutions.</p>
+    <div class="container">
+       <div class="row">
+           <div class="col">
+    
+               <h1>Student Management System</h1>
+               <br>
+               <style> 
+                   p{
+                   width:1000px;
+                   text-align: justify;
+                   text-align-last: justify;
+                   }
+               </style>
+             
+                <p> A student management system is an essential tool for educational institutions to efficiently manage student data and academic information. These systems typically include features such as student registration, attendance tracking, grade management, and communication tools between students, teachers, and parents. By centralizing student information, these systems streamline administrative tasks, improve communication, and provide valuable insights into student performance and progress. Additionally, they often offer security measures to protect sensitive data and customizable features to meet the specific needs of different educational settings. Overall, a well-designed student management system plays a crucial role in enhancing the overall effectiveness and organization of educational institutions.</p>
+                </p>
+            </div>
+         </div>
+     </div>
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="~/Images/StudSitTopofBook.webp"  width="400"class="d-block w-2" alt="...">
-            </div>
-            
-            
-            <div class="carousel-item">
-                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.16_1fc775c7.jpg" width="400" class="d-block w-2" alt="...">
+                <img src="~/Images/StudSitTopofBook.webp" style="height:500px" width="400" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.27_098b3971.jpg" width="400" class="d-block w-2" alt="...">
+                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.16_1fc775c7.jpg"  style="height:500px"width="500" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.36_61fed26b.jpg" width="400" class="d-block w-2" alt="...">
+                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.27_098b3971.jpg" style="height:500px" width="500" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.49_9fb6bbe8.jpg" width="400" class="d-block w-2" alt="...">
+                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.36_61fed26b.jpg" style="height:500px" width="500" class="d-block w-50" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.49_9fb6bbe8.jpg" style="height:500px" width="500" class="d-block w-50" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -33,50 +48,42 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-<hr /> 
-<h2>Advantages of Student Management</h2>
-<li>Streamlined administrative tasks</li>
- <li>Enhanced communication between teachers, students, and parents</li>
- <li>Centralized student data for efficient organization and analysis</li>
- <hr />
- <style>
-     .vertical-line{
-         border-left:5px solid black;
-         border-right:5px solid black;
-         height:500px;
-     }
- </style>
- 
-    <div class="container">
-        <div class="row">
-            <div class="col border-right">
-                <img src="" alt="" class="img-fluid mx-auto d-block">
+        <hr>
+            <h2>Advantages of Student Management</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <ul>
+                            <li>Streamlined administrative tasks</li>
+                            <li>Enhanced communication between teachers, students, and parents</li>
+                            <li>Centralized student data for efficient organization and analysis</li>
+                          
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <style>
-            .image-container {
-                position: relative;
-                width: 100%;
-            }
+            <hr />
+            <style>
+                .image-container {
+                    position: relative;
+                    width: 100%;
+                }
 
-            .text-overlay {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                color: white;
-                font-size: 0.75vw;
-                text-align: center;
-            }
-        </style>
-        </head>
-        <body>
+                .text-overlay {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    color: white;
+                    font-size: 0.75vw;
+                    text-align: center;
+                }
+            </style>
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <div class="image-container">
-                            <img src="~/Images/prasanna.jpg" alt="" class="img-fluid">
+                            <img src="~/Images/ps.jpeg" width="700" alt="" class="img-fluid">
                             <div class="text-overlay">
                                 <h2>About us</h2>
                                 <h6>Collage:Project</h6>
@@ -98,11 +105,6 @@
 
                                 <h4>Team:</h4>
                                 <li>Our team consists of skilled professionals with diverse backgrounds in web development, design, and project management. Together, we bring a wealth of experience and expertise to every project, ensuring the success of Project and the satisfaction of our clients.</li>
-                                
-
-
-
-                            </div>
                             </div>
                         </div>
                     </div>
@@ -111,3 +113,4 @@
         </div>
     </div>
 </center>
+    
