Update Home Page

--- a/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/Views/Home/Index.cshtml
@@ -1,12 +1,16 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<style>
+* {
+  font-family: 'Times New Roman', Times, serif; 
+}
+</style>
 <center>
     <div class="container">
        <div class="row">
            <div class="col">
-    
-               <h1>Student Management System</h1>
+             <h1>Student Management System</h1>
                <br>
                <style> 
                    p{
@@ -15,8 +19,7 @@
                    text-align-last: justify;
                    }
                </style>
-             
-                <p> A student management system is an essential tool for educational institutions to efficiently manage student data and academic information. These systems typically include features such as student registration, attendance tracking, grade management, and communication tools between students, teachers, and parents. By centralizing student information, these systems streamline administrative tasks, improve communication, and provide valuable insights into student performance and progress. Additionally, they often offer security measures to protect sensitive data and customizable features to meet the specific needs of different educational settings. Overall, a well-designed student management system plays a crucial role in enhancing the overall effectiveness and organization of educational institutions.</p>
+                  <p> A student management system is an essential tool for educational institutions to efficiently manage student data and academic information. These systems typically include features such as student registration, attendance tracking, grade management, and communication tools between students, teachers, and parents. By centralizing student information, these systems streamline administrative tasks, improve communication, and provide valuable insights into student performance and progress. Additionally, they often offer security measures to protect sensitive data and customizable features to meet the specific needs of different educational settings. Overall, a well-designed student management system plays a crucial role in enhancing the overall effectiveness and organization of educational institutions.</p>
                 </p>
             </div>
          </div>
@@ -85,7 +88,7 @@
                         <div class="image-container">
                             <img src="~/Images/ps.jpeg" width="700" alt="" class="img-fluid">
                             <div class="text-overlay">
-                                <h2>About us</h2>
+                                <h1>About us</h1>
                                 <h6>Collage:Project</h6>
 
                                 <h4> About project:</h4>
