--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -10,18 +10,33 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggle  able-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Student Management</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="nav-link text-dark" asp-controller="Student" asp-action="Add">Add New Student</a>
-                <a class="nav-link text-dark" asp-controller="Student" asp-action="View">View Student Details</a>
-                
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="row">
+                    <div class="col-md-4">
+                        <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                            <img src="/Images/Logo.png" class="border border-dark bg-black" style="width:20%;border-radius:50%" alt="Your Company Logo" />
+                            Student Management
+                        </a>
+                    </div>
+                    <div class="col-md-8">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                            <div class="row">
+                                <div class="col-sm-6 col-lg-6">
+                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="Add">Add New Student</a>
+                                </div>
+                                <div class="col-sm-6 col-lg-6">
+                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="View">View Student Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
             </div>
             <a href="https://www.instagram.com/sabarinathan_2k6/" target="_blank"><i class="fab fa-instagram fa-2x text-black m-3"></i></a>
             <a href="https://github.com/nsabari765/Personal" target="_blank"><i class="fab fa-github fa-2x text-black m-3"></i></a>
@@ -33,7 +48,8 @@
             @RenderBody()
         </main>
     </div>
-
+    <br />
+    <br />
     <footer class="border-top footer text-muted">
         <div class="container">
             <h6 class="display-6 text-center">Welcome....</h6>
