Update Index Page

--- a/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="container">
        <div class="row">
            <div class="col">
-             <h1>Student Management System</h1>
+    <h1>Student Management System</h1>
                <br>
                <style> 
                    p{
@@ -60,6 +60,14 @@
                             <li>Streamlined administrative tasks</li>
                             <li>Enhanced communication between teachers, students, and parents</li>
                             <li>Centralized student data for efficient organization and analysis</li>
+    <hr />
+    <style>
+        .vertical-line {
+            border-left: 5px solid black;
+            border-right: 5px solid black;
+            height: 500px;
+        }
+    </style>
                           
                         </ul>
                     </div>
@@ -82,15 +90,15 @@
                     text-align: center;
                 }
             </style>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <div class="image-container">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="image-container">
                             <img src="~/Images/ps.jpeg" width="700" alt="" class="img-fluid">
-                            <div class="text-overlay">
+                        <div class="text-overlay">
                                 <h1>About us</h1>
-                                <h6>Collage:Project</h6>
-
+                            <h6>Collage:Project</h6>
+                            <ul>
                                 <h4> About project:</h4>
                                 <li>Project is a team of dedicated individuals working together to develop a cutting-edge webpage for student management system. Our goal is to create a user-friendly platform that streamlines the process of managing student information and academic records.</li>
 
@@ -108,6 +116,11 @@
 
                                 <h4>Team:</h4>
                                 <li>Our team consists of skilled professionals with diverse backgrounds in web development, design, and project management. Together, we bring a wealth of experience and expertise to every project, ensuring the success of Project and the satisfaction of our clients.</li>
+                            </ul>
+
+
+
+                            </div>
                             </div>
                         </div>
                     </div>
