Update Git Hub Entry

--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
             </div>
             </div>
             <a href="https://www.instagram.com/sabarinathan_2k6/" target="_blank"><i class="fab fa-instagram fa-2x text-black m-3"></i></a>
-            <a href="https://github.com/nsabari765/Personal" target="_blank"><i class="fab fa-github fa-2x text-black m-3"></i></a>
+            <a href="https://github.com/nsabari765/Prototype" target="_blank"><i class="fab fa-github fa-2x text-black m-3"></i></a>
             <partial name="_LoginPartial" />
         </nav>
     </header>
