Add Hover in Index.cshtml

--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggle  able-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggle  able-sm navbar-light bg-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4">
                         <a class="navbar-brand" asp-controller="Home" asp-action="Index">
                             <img src="/Images/Logo.png" class="border border-dark bg-black" style="width:20%;border-radius:50%" alt="Your Company Logo" />
-                            Student Management
+                            <i class="fa fa-graduation-cap m-1"></i> Home
                         </a>
                     </div>
                     <div class="col-md-8">
