--- a/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/Views/Home/Index.cshtml
@@ -1,8 +1,27 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-}
+} 
+<div class="bg-lightpink">
 <style>
-* {
+       .nav-link:hover{
+           text-decoration:underline;
+           color:#fff;
+           padding:1px;
+            background-color:#;
+            border-radius:1px;
+            transition:box-shadow 0.1s ease;
+       }
+       .nav-link:hover{
+           box-shadow:0 0 0px 0px rgba(255,255,255,0.5);
+       }
+      .bg-lightpink{
+          background-color:#ffffe0;
+          height:100%;
+          width:100%;
+          padding:1px;
+          margin:1px;
+      }
+     *{
   font-family:Tahoma,Geneva,sans-serif; 
 }
 </style>
@@ -12,11 +31,11 @@
            <div class="col">
     <h1>Student Management System</h1>
                <br>
-               <style> 
-                   p{
-                   width:1000px;
-                   text-align: justify;
-                   text-align-last: justify;
+               <style>
+                    p {
+                     width: 1000px;
+                     text-align: justify;
+                     text-align-last: justify;
                    }
                </style>
                   <p> A student management system is an essential tool for educational institutions to efficiently manage student data and academic information. These systems typically include features such as student registration, attendance tracking, grade management, and communication tools between students, teachers, and parents. By centralizing student information, these systems streamline administrative tasks, improve communication, and provide valuable insights into student performance and progress. Additionally, they often offer security measures to protect sensitive data and customizable features to meet the specific needs of different educational settings. Overall, a well-designed student management system plays a crucial role in enhancing the overall effectiveness and organization of educational institutions.</p>
@@ -30,7 +49,7 @@
                 <img src="~/Images/StudSitTopofBook.webp" style="height:500px" width="400" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.16_1fc775c7.jpg"  style="height:500px"width="500" class="d-block w-50" alt="...">
+                <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.16_1fc775c7.jpg" style="height:500px" width="500" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="~/Images/WhatsApp Image 2024-03-08 at 21.53.27_098b3971.jpg" style="height:500px" width="500" class="d-block w-50" alt="...">
@@ -57,9 +76,9 @@
                 <div class="row">
                     <div class="col">
                         <ul>
-                            <li>Streamlined administrative tasks</li>
-                            <li>Enhanced communication between teachers, students, and parents</li>
-                            <li>Centralized student data for efficient organization and analysis</li>
+                            <h6>Streamlined administrative tasks</h6>
+                            <h6>Enhanced communication between teachers, students, and parents</h6>
+                            <h6>Centralized student data for efficient organization and analysis</h6>
     <hr />
     <style>
         .vertical-line {
@@ -97,7 +116,7 @@
                             <img src="~/Images/ps.jpeg" width="700" alt="" class="img-fluid">
                         <div class="text-overlay">
                                 <h1>About us</h1>
-                            <h6>Collage:Project</h6>
+                            <h7>Collage:Project</h7>
                             <ul>
                                 <h4> About project:</h4>
                                 <li>Project is a team of dedicated individuals working together to develop a cutting-edge webpage for student management system. Our goal is to create a user-friendly platform that streamlines the process of managing student information and academic records.</li>
