Update sms insite home

--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <div class="col-md-4">
                         <a class="navbar-brand" asp-controller="Home" asp-action="Index">
                             <img src="/Images/Logo.png" class="border border-dark bg-black" style="width:20%;border-radius:50%" alt="Your Company Logo" />
-                            <i class="fa fa-graduation-cap m-1"></i> Home
+                            <i class="fa fa-graduation-cap m-1"></i> SMS
                         </a>
                     </div>
                     <div class="col-md-8">
