Update index page

--- a/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/Views/Home/Index.cshtml
@@ -65,11 +65,13 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <ul>
-                        <h6>Streamlined administrative tasks</h6>
-                        <h6>Enhanced communication between teachers, students, and parents</h6>
-                        <h6>Centralized student data for efficient organization and analysis</h6>
-                        <hr />
+                    <ul> 
+                       <center>
+                        <h6 style="text-align:center">Streamlined administrative tasks</h6>
+                        <h6 style="text-align:center">Enhanced communication between teachers, students, and parents</h6>
+                         <h6 style="text-align:center">Centralized student data for efficient organization and analysis</h6>
+                       </center>
+                        <hr />     
                         <style>
                             .vertical-line {
                                 border-left: 5px solid black;
@@ -95,7 +97,7 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
                 color: white;
-                font-size: 0.75vw;
+                font-size: 17px;
                 text-align: center;
             }
         </style>
@@ -103,28 +105,27 @@
             <div class="row">
                 <div class="col">
                     <div class="image-container">
-                        <img src="~/Images/ps.jpeg" width="700" alt="" class="img-fluid">
+                        <img src="~/Images/ks.jpeg"  height="2000"width="1500" alt="" class="img-fluid">
                         <div class="text-overlay">
                             <h1>About us</h1>
-                            <h7>Collage:Project</h7>
+                            <h7>College:Project</h7>
                             <ul>
                                 <h4> About project:</h4>
-                                <li>Project is a team of dedicated individuals working together to develop a cutting-edge webpage for student management system. Our goal is to create a user-friendly platform that streamlines the process of managing student information and academic records.</li>
+                                <li style ="text-align:left"><p>Project is a team of dedicated individuals working together to develop a cutting-edge webpage for student management system. Our goal is to create a user-friendly platform that streamlines the process of managing student information and academic records.</p></li>
 
                                 <h4> Mission and Vision:</h4>
-                                <li>Our mission is to revolutionize the way educational institutions manage student data by providing a comprehensive and efficient online solution. We envision a future where schools and universities can easily access and update student information in real-time, leading to improved communication and decision-making.</li>
+                                <li style ="text-align:left">Our mission is to revolutionize the way educational institutions manage student data by providing a comprehensive and efficient online solution. We envision a future where schools and universities can easily access and update student information in real-time, leading to improved communication and decision-making.</li>
                                 <h4>Core Values</h4>
 
-                                <li>Innovation: We are committed to continuously improving and adapting our technology to meet the evolving needs of our clients.</li>
+                                <li style="text-align:left"> Integrity: We uphold the highest standards of integrity and ethics in all aspects of our work.</li>
+                                <li style="text-align:left">Innovation: We are committed to continuously improving and adapting our technology to meet the evolving needs of our clients.</li>
 
-                                <li>Collaboration: We believe in the power of teamwork and collaboration to achieve our goals and deliver exceptional results.</li>
+                                <li style="text-align:left">Collaboration: We believe in the power of teamwork and collaboration to achieve our goals and deliver exceptional results.</li>
 
-                                <li> Integrity: We uphold the highest standards of integrity and ethics in all aspects of our work.</li>
-
-                                <li>Customer Focus: We prioritize the needs and satisfaction of our clients, striving to exceed their expectations in every project.</li>
+                                <li style="text-align:left">Customer Focus: We prioritize the needs and satisfaction of our clients, striving to exceed their expectations in every project.</li>
 
                                 <h4>Team:</h4>
-                                <li>Our team consists of skilled professionals with diverse backgrounds in web development, design, and project management. Together, we bring a wealth of experience and expertise to every project, ensuring the success of Project and the satisfaction of our clients.</li>
+                                <li style ="text-align:left">Our team consists of skilled professionals with diverse backgrounds in web development, design, and project management. Together, we bring a wealth of experience and expertise to every project, ensuring the success of Project and the satisfaction of our clients.</li>
                             </ul>
 
 
