--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
                         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                             <div class="row">
                                 <div class="col-sm-6 col-lg-6">
-                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="Add"><i class="fa fa-plus m-3"></i>Student</a>
+                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="Add"><i class="px-5 fa fa-plus m-3"></i><br /><span class="px-5"</span>Student</a>
                                 </div>
                                 <div class="col-sm-6 col-lg-6">
-                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="View"><i class="fa fa-eye m-3"></i>Student</a>
+                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="View"><i class="fa fa-eye m-3"></i><br />Student</a>
                                 </div>
                             </div>
                         </div>
