--- a/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/Views/Home/Index.cshtml
@@ -1,7 +1,14 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 <div class="bg-lightpink">
+
     <style>
         .bg-lightpink {
             background-color: #ffffe0;
@@ -14,21 +21,30 @@
         * {
             font-family: Tahoma,Geneva,sans-serif;
         }
+        #title{
+            font-family: "Russo One", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        }
     </style>
     <center>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <h1>Student Management System</h1>
+                    <h1 id="title">Student Management System</h1>
                     <br>
                     <style>
                         p {
-                            width: 1000px;
+                            width: 1114px;
                             text-align: justify;
                             text-align-last: justify;
+                            font-family: "Alegreya SC", serif;
+                            font-weight: 500;
+                            font-style: italic;
+                            font-size:20px;
                         }
                     </style>
-                    <p> A student management system is an essential tool for educational institutions to efficiently manage student data and academic information. These systems typically include features such as student registration, attendance tracking, grade management, and communication tools between students, teachers, and parents. By centralizing student information, these systems streamline administrative tasks, improve communication, and provide valuable insights into student performance and progress. Additionally, they often offer security measures to protect sensitive data and customizable features to meet the specific needs of different educational settings. Overall, a well-designed student management system plays a crucial role in enhancing the overall effectiveness and organization of educational institutions.</p>
+                    <p id="home"> A student management system is an essential tool for educational institutions to efficiently manage student<br /> data and academic information. These systems typically include features such as student registration, attendance tracking, grade management, and communication tools between students, teachers, and parents. By centralizing student information, these systems streamline administrative tasks, improve communication, and provide valuable insights into student performance and progress. Additionally, they often offer security measures to protect sensitive data and customizable features to meet the specific needs of different educational settings. Overall, a well-designed student management system plays a crucial role in enhancing the overall effectiveness and organization of educational institutions.</p>
                     </p>
                 </div>
             </div>
@@ -111,7 +127,7 @@
                             <h7>College:Project</h7>
                             <ul>
                                 <h4> About project:</h4>
-                                <li style ="text-align:left"><p>Project is a team of dedicated individuals working together to develop a cutting-edge webpage for student management system. Our goal is to create a user-friendly platform that streamlines the process of managing student information and academic records.</p></li>
+                                <li style ="text-align:left"><p style="width:1140px">Project is a team of dedicated individuals working together to develop a cutting-edge webpage for student management system. Our goal is to create a user-friendly platform that streamlines the process of managing student information and academic records.</p></li>
 
                                 <h4> Mission and Vision:</h4>
                                 <li style ="text-align:left">Our mission is to revolutionize the way educational institutions manage student data by providing a comprehensive and efficient online solution. We envision a future where schools and universities can easily access and update student information in real-time, leading to improved communication and decision-making.</li>
@@ -127,9 +143,6 @@
                                 <h4>Team:</h4>
                                 <li style ="text-align:left">Our team consists of skilled professionals with diverse backgrounds in web development, design, and project management. Together, we bring a wealth of experience and expertise to every project, ensuring the success of Project and the satisfaction of our clients.</li>
                             </ul>
-
-
-
                         </div>
                     </div>
                 </div>
