--- a/StudentManagement/Areas/Identity/Pages/Account/Register.cshtml
+++ b/StudentManagement/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,83 +5,62 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
 
 <div class="row">
+    <div class="col-md-4"></div>
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h1>@ViewData["Title"]</h1>
+            <h2>Create a new Student account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <label asp-for="Input.FirstName" class="fs-6"><i class="far fa-smile"></i> First Name</label>
             <div class="form-floating">
                 <input type="text" asp-for="Input.FirstName" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.FirstName"></label>
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
+            <label asp-for="Input.LastName" class="fs-6"><i class="far fa-smile"></i> Last Name</label>
             <div class="form-floating">
                 <input type="text" asp-for="Input.LastName" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.LastName"></label>
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
+            <label asp-for="Input.Email" class="fs-6"><i class="fas fa-mail-bulk"></i> Email</label>
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            <label asp-for="Input.Password" class="fs-6"><i class="fas fa-user-lock"></i> Password</label>
+            <div class="form-floating input-group">
+                <input asp-for="Input.Password" id="password" class="form-control" autocomplete="new-password" aria-required="true" />
+                <div class="input-group-append">
+                    <span class="input-group-text eye-icon h-100" id="togglePassword">
+                        <i class="fas fa-eye"></i>
+                    </span>
+                </div>
+            </div>
+            <label asp-for="Input.ConfirmPassword" class="fs-6"><i class="fas fa-user-lock"></i> Confirm Password</label>
+            <div class="form-floating input-group">
+                <input asp-for="Input.ConfirmPassword" id="confirm_password" class="form-control" autocomplete="new-password" aria-required="true" />
+                <div class="input-group-append">
+                    <span class="input-group-text eye-icon h-100" id="toggleConfirmPassword">
+                        <i class="fas fa-eye"></i>
+                    </span>
+                </div>
             </div>
             <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-control" aria-required="true">
+                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" disabled class="form-control" aria-required="true" style="display:none">
                     <option value="0">Select Role</option>
                 </select>
-                <label asp-for="Input.Role"></label>
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            </div><br />
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary"><i class="fa fa-registered"></i> Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                article
-                                about setting up this ASP.NET application to support logging in via external services
-                            </a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
+    <div class="col-md-4"></div>
 </div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="~/js/Registration/Registration.js"></script>
+
